--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,21 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  build_runner: ^2.4.15
   flutter:
     sdk: flutter
   geocoding: ^3.0.0
   geolocator: ^13.0.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  http: ^1.3.0
   intl: ^0.20.2
-  prayers_times: ^0.0.6
+  # isar_flutter_libs: ^2.1.4
+  # path_provider: ^2.0.15
+  # prayers_times: ^0.0.6
   provider: ^6.1.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
