--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,14 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   http: ^1.3.0
+  image_picker: ^1.1.2
   intl: ^0.20.2
   # isar_flutter_libs: ^2.1.4
   # path_provider: ^2.0.15
   # prayers_times: ^0.0.6
   provider: ^6.1.2
   shared_preferences: ^2.5.2
+  syncfusion_flutter_calendar: ^28.2.11
 
 dev_dependencies:
   flutter_test:
